tests/fixtures/invalid/pow_bytes_none_none.py
# Cannot call pow() with Bytes, None, None
x = pow(b"hello", None, None)
